added general info and styled cards

--- a/index.html
+++ b/index.html
@@ -4,11 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WeatherAPP</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
 </head>
 <body>
+    <nav>
+        <div class="plus-menu">
+
+        </div>
+        <div class="city">
+            <h2>Leszno</h2>
+        </div>
+        <div class="icon">
+
+        </div>
+    </nav>
+    <main>
+        <section id="general-info">
+            <div class="temperature">
+                <h1>
+                    16°C
+                </h1>
+            </div>
+            <div class="condition">
+                <h3>
+                    Clear
+                </h3>
+            </div>
+            <div class="aqi">
+                <button class="aqi-button">
+                    <img src="img/leaf.png" alt="leaf icon">
+                    <h3>
+                        AQI 25
+                    </h3>
+                </button>
+            </div>
+        </section>
+        <section id="other-params">
+            <div class="container">
+                <div class="card wind">
+
+                </div>
+                <div class="card pressure">
     
+                </div>
+            </div>
+            <div class="card secondary-info">
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
