--- a/index.html
+++ b/index.html
@@ -44,10 +44,19 @@
         <section id="other-params">
             <div class="container">
                 <div class="card wind">
-
+                    <img src="img/wind.png" alt="wind icon">
+                    <h3>
+                        14.8km/h
+                    </h3>
+                    <h3>
+                        EAST
+                    </h3>
                 </div>
                 <div class="card pressure">
-    
+                    <img src="img/pressure.png" alt="pressure icon">
+                    <h3>
+                        1018hPa
+                    </h3>
                 </div>
             </div>
             <div class="card secondary-info">
