displayed response data on frontend

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         </div>
         <div class="city">
-            <h2 id="city-name">Leszno</h2>
+            <h2 id="city"></h2>
         </div>
         <div class="icon">
 
@@ -22,19 +22,15 @@
     <main>
         <section id="general-info">
             <div class="temperature">
-                <h1 id="temperature">
-                    16°C
-                </h1>
+                <h1 id="temperature"></h1>
             </div>
             <div class="condition">
-                <h3>
-                    Clear
-                </h3>
+                <h3 id="condition"></h3>
             </div>
             <div class="aqi">
                 <button class="aqi-button">
                     <img src="img/leaf.png" alt="leaf icon">
-                    <h3>
+                    <h3 id="aqi">
                         AQI 25
                     </h3>
                 </button>
@@ -44,18 +40,12 @@
             <div class="container">
                 <div class="card wind">
                     <img src="img/wind.png" alt="wind icon">
-                    <h3>
-                        14.8km/h
-                    </h3>
-                    <h3>
-                        EAST
-                    </h3>
+                    <h3 id="wind-kph"></h3>
+                    <h3 id="wind-dir"></h3>
                 </div>
                 <div class="card pressure">
                     <img src="img/pressure.png" alt="pressure icon">
-                    <h3>
-                        1018hPa
-                    </h3>
+                    <h3 id="pressure"></h3>
                 </div>
             </div>
             <div class="card secondary-info">
