--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
             <div class="aqi">
                 <button class="aqi-button">
                     <img src="img/leaf.png" alt="leaf icon">
-                    <h3 id="aqi">
-                        AQI 25
-                    </h3>
+                    <h3 id="aqi"></h3>
                 </button>
             </div>
         </section>
