added values to secondary info section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             <div class="container">
                 <div class="card wind">
                     <img src="img/wind.png" alt="wind icon">
-                    <h3 id="wind-kph"></h3>
-                    <h3 id="wind-dir"></h3>
+                    <h3 id="wind"></h3>
                 </div>
                 <div class="card pressure">
                     <img src="img/pressure.png" alt="pressure icon">
@@ -47,7 +46,24 @@
                 </div>
             </div>
             <div class="card secondary-info">
-
+                <ul>
+                    <li>
+                        <span id="feels-like">Feels like</span>
+                        <span id="value-feels-like">15</span>
+                    </li>
+                    <li>
+                        <span id="humidity">Humidity</span>
+                        <span id="value-humidity">15</span>
+                    </li>
+                    <li>
+                        <span id="uv">UV</span>
+                        <span id="value-uv">15</span>
+                    </li>
+                    <li>
+                        <span id="clouds">Clouds</span>
+                        <span id="value-clouds">15</span>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
