--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 id="city"></h2>
         </div>
         <div class="icon">
-
+            <img id="icon" src="" width="200px">
         </div>
     </nav>
     <main>
@@ -28,10 +28,14 @@
                 <h3 id="condition"></h3>
             </div>
             <div class="aqi">
-                <button class="aqi-button">
+                <button class="aqi-button" data-open-modal>
                     <img src="img/leaf.png" alt="leaf icon">
                     <h3 id="aqi"></h3>
                 </button>
+                <dialog data-modal class="modal" open>
+                    <p>this is a modal</p>
+                    <button data-close-modal>Close</button>
+                </dialog>
             </div>
         </section>
         <section id="other-params">
@@ -49,19 +53,19 @@
                 <ul>
                     <li>
                         <span id="feels-like">Feels like</span>
-                        <span id="value-feels-like">15</span>
+                        <span id="value-feels-like"></span>
                     </li>
                     <li>
                         <span id="humidity">Humidity</span>
-                        <span id="value-humidity">15</span>
+                        <span id="value-humidity"></span>
                     </li>
                     <li>
                         <span id="uv">UV</span>
-                        <span id="value-uv">15</span>
+                        <span id="value-uv"></span>
                     </li>
                     <li>
                         <span id="clouds">Clouds</span>
-                        <span id="value-clouds">15</span>
+                        <span id="value-clouds"></span>
                     </li>
                 </ul>
             </div>
